maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:42: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x,y-1,cpt)
                ^JediEscaper:46: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x,y-1,cpt)
                ^JediEscaper:52: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x-1,y,cpt)
                ^JediEscaper:56: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
      marqueCase(x-1,y,cpt)
                ^JediEscaper:63: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x+1,y,cpt)
                  ^JediEscaper:67: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x+1,y,cpt)
                  ^JediEscaper:75: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x,y+1,cpt)
                  ^JediEscaper:79: error: too many arguments for method marqueCase: (x: Int, y: Int)Unit
        marqueCase(x,y+1,cpt)
                  ^